--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: minefield
+title: moselikk
 email: moselikk@gmail.com
 author: "Moseli KK"
 logo: "./apple-touch-icon.png"
