feat: readom tip

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # Site settings
 title: moselikk
 email: moselikk@gmail.com
-author: "Moseli KK"
+author: "Moselikk"
 logo: "./apple-touch-icon.png"
 lang: "zh-cmn-Hans"
 description: "Less is more."
