--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -54,7 +54,7 @@ jobs:
 
       - name: Build Jekyll site
         run: |
-          bundle exec jekyll build --safe \
+          bundle exec jekyll build \
             --baseurl "${{ steps.pages.outputs.base_path }}" \
             --destination ./_site \
             --trace
