--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -1,9 +1,8 @@
-name: Deploy Jekyll site to GitHub Pages
+name: Deploy Jekyll site to Pages
 
 on:
   push:
-    branches:
-      - main  # 仅在main分支推送时触发
+    branches: ["main"]
   workflow_dispatch:
 
 permissions:
@@ -12,60 +11,44 @@ permissions:
   id-token: write
 
 concurrency:
-  group: "pages-${{ github.ref }}"
-  cancel-in-progress: true  # 新运行会取消旧运行
+  group: "pages"
+  cancel-in-progress: false
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        ruby-version: ["3.2"]  # 使用最新稳定版Ruby
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v4
-        with:
-          submodules: recursive  # 包含子模块
 
-      - name: Set up Ruby ${{ matrix.ruby-version }}
+      - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: ${{ matrix.ruby-version }}
-          bundler-cache: true  # 缓存Bundler依赖
-          cache-path: vendor/bundle
+          ruby-version: '3.1'
+          bundler-cache: true
 
-      - name: Merge Gitalk configuration
+      - name: Setup Pages
+        id: pages
+        uses: actions/configure-pages@v1
+
+      - name: Build with Jekyll
         run: |
-          cat <<EOF >> _config.yml
-          gitalk:
-            clientID: '${{ secrets.GITALK_CLIENT_ID }}'
-            clientSecret: '${{ secrets.GITALK_CLIENT_SECRET }}'
-            repo: '${{ github.repository }}'
-            owner: '${{ github.repository_owner }}'
-            admin:
-              - '${{ github.repository_owner }}'
-            distractionFreeMode: false
-          EOF
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Validate Jekyll configuration
-        run: bundle exec jekyll doctor
-
-      - name: Build Jekyll site
-        run: |
-          bundle exec jekyll build \
-            --baseurl "${{ steps.pages.outputs.base_path }}" \
-            --destination ./_site \
-            --trace
+          echo "gitalk:" >> _config.yml
+          echo "  clientID: '${{ secrets.GITALK_CLIENT_ID }}'" >> _config.yml
+          echo "  clientSecret: '${{ secrets.GITALK_CLIENT_SECRET }}'" >> _config.yml
+          echo "  repo: 'moselikk/moselikk.github.io'" >> _config.yml
+          echo "  owner: 'moselikk'" >> _config.yml
+          echo "  admin: ['moselikk']" >> _config.yml
+          echo "  distractionFreeMode: false" >> _config.yml
+          bundle exec jekyll build --destination _site --baseurl "${{ steps.pages.outputs.base_path }}"
         env:
           JEKYLL_ENV: production
-          LC_ALL: C.UTF-8
 
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
+        uses: actions/upload-pages-artifact@v1
         with:
-          path: ./_site
+          name: jekyll-build
+          path: _site
 
   deploy:
     environment:
@@ -76,10 +59,9 @@ jobs:
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v4
+        uses: actions/deploy-pages@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           repository-name: ${{ github.repository }}
           branch: gh-pages
-          folder: ./_site
-          force-orphan: true  # 创建独立分支
+          folder: _site
