--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -1,8 +1,9 @@
-name: Deploy Jekyll site to Pages
+name: Deploy Jekyll site to GitHub Pages
 
 on:
   push:
-    branches: ["main"]
+    branches:
+      - main  # 仅在main分支推送时触发
   workflow_dispatch:
 
 permissions:
@@ -11,44 +12,60 @@ permissions:
   id-token: write
 
 concurrency:
-  group: "pages"
-  cancel-in-progress: false
+  group: "pages-${{ github.ref }}"
+  cancel-in-progress: true  # 新运行会取消旧运行
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        ruby-version: ["3.2"]  # 使用最新稳定版Ruby
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          submodules: recursive  # 包含子模块
 
-      - name: Setup Ruby
+      - name: Set up Ruby ${{ matrix.ruby-version }}
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.1'
-          bundler-cache: true
+          ruby-version: ${{ matrix.ruby-version }}
+          bundler-cache: true  # 缓存Bundler依赖
+          cache-path: vendor/bundle
 
-      - name: Setup Pages
-        id: pages
-        uses: actions/configure-pages@v1
-
-      - name: Build with Jekyll
+      - name: Merge Gitalk configuration
         run: |
-          echo "gitalk:" >> _config.yml
-          echo "  clientID: '${{ secrets.GITALK_CLIENT_ID }}'" >> _config.yml
-          echo "  clientSecret: '${{ secrets.GITALK_CLIENT_SECRET }}'" >> _config.yml
-          echo "  repo: 'moselikk/moselikk.github.io'" >> _config.yml
-          echo "  owner: 'moselikk'" >> _config.yml
-          echo "  admin: ['moselikk']" >> _config.yml
-          echo "  distractionFreeMode: false" >> _config.yml
-          bundle exec jekyll build --destination _site --baseurl "${{ steps.pages.outputs.base_path }}"
+          cat <<EOF >> _config.yml
+          gitalk:
+            clientID: '${{ secrets.GITALK_CLIENT_ID }}'
+            clientSecret: '${{ secrets.GITALK_CLIENT_SECRET }}'
+            repo: '${{ github.repository }}'
+            owner: '${{ github.repository_owner }}'
+            admin:
+              - '${{ github.repository_owner }}'
+            distractionFreeMode: false
+          EOF
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Validate Jekyll configuration
+        run: bundle exec jekyll doctor
+
+      - name: Build Jekyll site
+        run: |
+          bundle exec jekyll build \
+            --baseurl "${{ steps.pages.outputs.base_path }}" \
+            --destination ./_site \
+            --trace
         env:
           JEKYLL_ENV: production
+          LC_ALL: C.UTF-8
 
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1
+        uses: actions/upload-pages-artifact@v3
         with:
-          name: jekyll-build
-          path: _site
+          path: ./_site
 
   deploy:
     environment:
@@ -59,9 +76,10 @@ jobs:
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v1
+        uses: actions/deploy-pages@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           repository-name: ${{ github.repository }}
           branch: gh-pages
-          folder: _site
+          folder: ./_site
+          force-orphan: true  # 创建独立分支
