--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -1,84 +1,40 @@
-name: Deploy Jekyll site to GitHub Pages
+name: Build and Deploy to Github Pages
 
 on:
   push:
     branches:
-      - main  # 仅在main分支推送时触发
-  workflow_dispatch:
-
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-concurrency:
-  group: "pages-${{ github.ref }}"
-  cancel-in-progress: true  # 新运行会取消旧运行
+      - main  # Here source code branch is `master`, it could be other branch
 
 jobs:
-  build:
+  build_and_deploy:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        ruby-version: ["3.2"]  # 使用最新稳定版Ruby
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
+
+      # Use GitHub Actions' cache to cache dependencies on servers
+      - uses: actions/cache@v4
         with:
-          submodules: recursive  # 包含子模块
+          path: |
+            .asdf/**
+            vendor/bundle
+          key: ${{ runner.os }}-cache-${{ hashFiles('**/cache.key') }}
+          restore-keys: |
+            ${{ runner.os }}-cache-
 
-      - name: Set up Ruby ${{ matrix.ruby-version }}
-        uses: ruby/setup-ruby@v1
+      # Use GitHub Deploy Action to build and deploy to Github
+      # For latest version: `jeffreytse/jekyll-deploy-action@master`
+      - uses: jeffreytse/jekyll-deploy-action@v0.6.0
         with:
-          ruby-version: ${{ matrix.ruby-version }}
-          bundler-cache: true  # 缓存Bundler依赖
-          cache-path: vendor/bundle
-
-      - name: Merge Gitalk configuration
-        run: |
-          cat <<EOF >> _config.yml
-          gitalk:
-            clientID: '${{ secrets.GITALK_CLIENT_ID }}'
-            clientSecret: '${{ secrets.GITALK_CLIENT_SECRET }}'
-            repo: '${{ github.repository }}'
-            owner: '${{ github.repository_owner }}'
-            admin:
-              - '${{ github.repository_owner }}'
-            distractionFreeMode: false
-          EOF
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Validate Jekyll configuration
-        run: bundle exec jekyll doctor
-
-      - name: Build Jekyll site
-        run: |
-          bundle exec jekyll build \
-            --baseurl "${{ steps.pages.outputs.base_path }}" \
-            --destination ./_site \
-            --trace
-        env:
-          JEKYLL_ENV: production
-          LC_ALL: C.UTF-8
-
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: ./_site
-
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          repository-name: ${{ github.repository }}
-          branch: gh-pages
-          folder: ./_site
+          provider: 'github'         # Default is github
+          token: ${{ secrets.GITHUB_TOKEN }} # It's your Personal Access Token(PAT)
+          ssh_private_key: ''        # It's your SSH private key (SSH approach)
+          repository: ''             # Default is current repository
+          branch: 'gh-pages'         # Default is gh-pages for github provider
+          jekyll_src: './'           # Default is root directory
+          jekyll_cfg: '_config.yml'  # Default is _config.yml
+          jekyll_baseurl: ''         # Default is according to _config.yml
+          ruby_ver: ''               # Default is 3.2.0 version
+          bundler_ver: ''            # Default is compatible bundler version (~>2.5.0)
+          cname: ''                  # Default is to not use a cname
+          actor: ''                  # Default is the GITHUB_ACTOR
+          pre_build_commands: ''     # Installing additional dependencies (Arch Linux)
