--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -11,6 +11,21 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Merge Gitalk configuration
+        run: |
+          cat <<EOF >> _config.yml
+          gitalk:
+            clientID: '${{ secrets.GITALK_CLIENT_ID }}'
+            clientSecret: '${{ secrets.GITALK_CLIENT_SECRET }}'
+            repo: '${{ github.repository }}'
+            owner: '${{ github.repository_owner }}'
+            admin:
+              - '${{ github.repository_owner }}'
+            distractionFreeMode: false
+          EOF
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       # Use GitHub Actions' cache to cache dependencies on servers
       - uses: actions/cache@v4
         with:
